--- a/index.html
+++ b/index.html
@@ -3,33 +3,34 @@
  <head>
  <title>Calulator project</title>
  <style>
-  .container {
+  .grid-container {
    border: 3px solid black;
-   display: flex;
-   flex-direction: column;
-   flex-wrap: wrap;
+   display: grid;
+   grid-template:    /   ;
+   width: 300px;
+   height: 250px;
   }
-  .item {
-  
+  .grid-item {
+  background-color: #286087;
    }
  </style>
  </head>
  <body>
   <h1>Calculator<h1>
-  <div class="container">
-   <div class="item"><button>1<button></div>
-   <div class="item"><button>2<button></div>
-   <div class="item"><button>3<button></div>
-   <div class="item"><button>4<button></div>
-   <div class="item"><button>5<button></div>
-   <div class="item"><button>6<button></div>
-   <div class="item"><button>7<button></div>
-   <div class="item"><button>8<button></div>
-   <div class="item"><button>9<button></div>
-   <div class="item"><button>+<button></div>
-   <div class="item"><button>=<button></div>
-   <div class="item"><button>&times;<button></div>
-   <div class="item"><button>&div;<button></div>
+  <div class="grid-container">
+   <div class="grid-item"><button>1<button></div>
+   <div class="grid-item"><button>2<button></div>
+   <div class="grid-item"><button>3<button></div>
+   <div class="grid-item"><button>4<button></div>
+   <div class="grid-item"><button>5<button></div>
+   <div class="grid-item"><button>6<button></div>
+   <div class="grid-item"><button>7<button></div>
+   <div class="grid-item"><button>8<button></div>
+   <div class="grid-item"><button>9<button></div>
+   <div class="grid-item"><button>+<button></div>
+   <div class="grid-item"><button>=<button></div>
+   <div class="grid-item"><button>&times;<button></div>
+   <div class="grid-item"><button>&div;<button></div>
   </div>
  </body>
 </html>
