--- a/index.html
+++ b/index.html
@@ -6,31 +6,77 @@
   .grid-container {
    border: 3px solid black;
    display: grid;
-   grid-template:    /   ;
+   grid-template-areas: 
+    "item1 item2 item3 item4"
+    "item5 item6 item7 item8"
+    "item9 item10 item11 item12"
+    "item13 item13 item13 item13";
    width: 300px;
    height: 250px;
   }
   .grid-item {
   background-color: #286087;
-   }
+  border-radius: 35px;
+  }
+  .item1 {
+   grid-area: item1;
+  }.item1 {
+   grid-area: item1;
+  }
+  .item2 {
+   grid-area: item2;
+  }
+  .item3 {
+   grid-area: item3;
+  }
+  .item4 {
+   grid-area: item4;
+  }
+  .item5 {
+   grid-area: item5;
+  }
+  .item6 {
+   grid-area: item6;
+  }
+  .item7 {
+   grid-area: item7;
+  }
+  .item8 {
+   grid-area: item8;
+  }
+  .item9 {
+   grid-area: item9;
+  }
+  .item10 {
+   grid-area: item10;
+  }
+  .item11 {
+   grid-area: item11;
+  }
+  .item12 {
+   grid-area: item12;
+  }
+  .item13 {
+   grid-area: item13;
+  }
  </style>
  </head>
  <body>
   <h1>Calculator<h1>
   <div class="grid-container">
-   <div class="grid-item"><button>1<button></div>
-   <div class="grid-item"><button>2<button></div>
-   <div class="grid-item"><button>3<button></div>
-   <div class="grid-item"><button>4<button></div>
-   <div class="grid-item"><button>5<button></div>
-   <div class="grid-item"><button>6<button></div>
-   <div class="grid-item"><button>7<button></div>
-   <div class="grid-item"><button>8<button></div>
-   <div class="grid-item"><button>9<button></div>
-   <div class="grid-item"><button>+<button></div>
-   <div class="grid-item"><button>=<button></div>
-   <div class="grid-item"><button>&times;<button></div>
-   <div class="grid-item"><button>&div;<button></div>
+   <div class="grid-item item1"><button>1<button></div>
+   <div class="grid-item item2"><button>2<button></div>
+   <div class="grid-item item3"><button>3<button></div>
+   <div class="grid-item item4"><button>4<button></div>
+   <div class="grid-item item5"><button>5<button></div>
+   <div class="grid-item item6"><button>6<button></div>
+   <div class="grid-item item7"><button>7<button></div>
+   <div class="grid-item item8"><button>8<button></div>
+   <div class="grid-item item9"><button>9<button></div>
+   <div class="grid-item item10"><button>+<button></div>
+   <div class="grid-item item11"><button>=<button></div>
+   <div class="grid-item item12"><button>&times;<button></div>
+   <div class="grid-item item13"><button>&div;<button></div>
   </div>
  </body>
 </html>
