change made within index.html
within this commit I changed the width and height of the grid container as I thought it looked a bit too small and squished whilst also making the entire button the grid-item.

--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
     "item5 item6 item7 item8"
     "item9 item10 item11 item12"
     "item13 item13 item13 item13";
-   width: 300px;
-   height: 250px;
+   width: 600px;
+   height: 600px;
   }
   .grid-item {
   background-color: #286087;
@@ -64,19 +64,19 @@
  <body>
   <h1>Calculator<h1>
   <div class="grid-container">
-   <div class="grid-item item1"><button>1<button></div>
-   <div class="grid-item item2"><button>2<button></div>
-   <div class="grid-item item3"><button>3<button></div>
-   <div class="grid-item item4"><button>4<button></div>
-   <div class="grid-item item5"><button>5<button></div>
-   <div class="grid-item item6"><button>6<button></div>
-   <div class="grid-item item7"><button>7<button></div>
-   <div class="grid-item item8"><button>8<button></div>
-   <div class="grid-item item9"><button>9<button></div>
-   <div class="grid-item item10"><button>+<button></div>
-   <div class="grid-item item11"><button>=<button></div>
-   <div class="grid-item item12"><button>&times;<button></div>
-   <div class="grid-item item13"><button>&div;<button></div>
+   <button class="grid-item item1">1<button>
+   <button class="grid-item item2">2<button>
+   <button class="grid-item item3">3<button>
+   <button class="grid-item item4">4<button>
+   <button class="grid-item item5">5<button>
+   <button class="grid-item item6">6<button>
+   <button class="grid-item item7">7<button>
+   <button class="grid-item item8">8<button>
+   <button class="grid-item item9">9<button>
+   <button class="grid-item item10">+<button>
+   <button class="grid-item item11">=<button>
+   <button class="grid-item item12">&times;<button>
+   <button class="grid-item item13">&div;<button>
   </div>
  </body>
 </html>
